--- a/index.html
+++ b/index.html
@@ -1,200 +1,208 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DropTenis - Tienda Exclusiva</title>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Roboto&display=swap" rel="stylesheet">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Tenis Premium - Compra Directa</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+    
     <style>
         :root {
-            --primary: #000000;
-            --accent: #ff0000;
-            --text: #ffffff;
-            --gray: #f0f0f0;
+            --navy: #0a1d37;           /* Azul marino apagado */
+            --gold: #c9a96e;           /* Dorado nubloso / envejecido */
+            --gold-dark: #a67c52;
+            --bg-light: #f8f9fa;
+            --text-dark: #1a1a1a;
         }
-        body { margin: 0; font-family: 'Roboto', sans-serif; background: var(--primary); color: var(--text); }
-        h1, h2 { font-family: 'Montserrat', sans-serif; }
-        .container { max-width: 1200px; margin: 0 auto; padding: 20px; }
 
-        /* Login Screen */
-        #login-screen { display: flex; align-items: center; justify-content: center; min-height: 100vh; background: var(--primary); }
-        .login-box { background: #111; padding: 40px; border-radius: 10px; text-align: center; width: 350px; border: 2px solid var(--accent); }
-        .login-box input { width: 100%; padding: 12px; margin: 10px 0; border: none; border-radius: 5px; }
-        .login-box button { background: var(--accent); color: white; padding: 12px; border: none; width: 100%; cursor: pointer; font-weight: bold; margin-top: 10px; }
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
 
-        /* Main Content (hidden until login) */
-        #main-content { display: none; }
-        .hero { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px; margin-bottom: 50px; }
-        .hero-item { aspect-ratio: 4/6; background: #222; border: 3px solid white; overflow: hidden; }
-        .hero-item img { width: 100%; height: 100%; object-fit: cover; }
+        body {
+            font-family: 'Montserrat', sans-serif;
+            background-color: var(--bg-light);
+            color: var(--text-dark);
+            line-height: 1.6;
+        }
 
-        .section-title { font-size: 2.5em; text-align: center; margin: 40px 0; }
+        /* Header / Hero */
+        header {
+            background: linear-gradient(rgba(10, 29, 55, 0.85), rgba(10, 29, 55, 0.75)),
+                        url('https://images.unsplash.com/photo-1600585154340-be6161a56a0c?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80') center/cover no-repeat;
+            color: white;
+            text-align: center;
+            padding: 180px 20px 140px;
+            position: relative;
+        }
 
-        .carousel-row { display: flex; overflow-x: auto; gap: 20px; padding: 20px 0; scroll-snap-type: x mandatory; }
-        .product-card { flex: 0 0 300px; aspect-ratio: 3/4; background: #222; border: 3px solid white; display: flex; flex-direction: column; justify-content: space-between; padding: 15px; scroll-snap-align: start; cursor: pointer; }
-        .product-card img { width: 100%; height: 70%; object-fit: contain; background: #333; }
-        .product-card.empty { border: 3px dashed white; justify-content: center; align-items: center; font-style: italic; }
+        header h1 {
+            font-family: 'Playfair Display', serif;
+            font-size: 4.5rem;
+            letter-spacing: 3px;
+            margin-bottom: 1rem;
+            text-shadow: 0 4px 12px rgba(0,0,0,0.6);
+        }
 
-        footer { background: #111; padding: 30px; text-align: center; margin-top: 50px; }
-        .social-links a { color: var(--text); margin: 0 20px; font-size: 1.2em; text-decoration: none; }
+        header .subtitle {
+            font-size: 1.5rem;
+            font-weight: 400;
+            letter-spacing: 2px;
+            opacity: 0.95;
+            margin-bottom: 2.5rem;
+        }
 
-        .welcome { text-align: center; font-size: 1.8em; margin: 30px 0; }
+        .btn-primary {
+            display: inline-block;
+            background-color: var(--gold);
+            color: var(--navy);
+            font-weight: 700;
+            padding: 1rem 2.8rem;
+            border-radius: 50px;
+            text-decoration: none;
+            font-size: 1.3rem;
+            letter-spacing: 1.5px;
+            transition: all 0.3s ease;
+            box-shadow: 0 8px 25px rgba(0,0,0,0.4);
+        }
+
+        .btn-primary:hover {
+            transform: translateY(-4px);
+            box-shadow: 0 12px 35px rgba(0,0,0,0.5);
+            background-color: var(--gold-dark);
+        }
+
+        /* Index / Navegación */
+        .index-nav {
+            background-color: var(--navy);
+            padding: 1.5rem 0;
+            text-align: center;
+        }
+
+        .index-nav ul {
+            list-style: none;
+            display: flex;
+            justify-content: center;
+            gap: 4rem;
+            flex-wrap: wrap;
+        }
+
+        .index-nav li a {
+            color: white;
+            text-decoration: none;
+            font-size: 1.4rem;
+            font-weight: 600;
+            letter-spacing: 1.5px;
+            position: relative;
+            transition: all 0.3s;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 0.8rem;
+        }
+
+        .index-nav li a:hover {
+            color: var(--gold);
+        }
+
+        .index-nav li a::after {
+            content: '';
+            position: absolute;
+            width: 0;
+            height: 3px;
+            bottom: -10px;
+            left: 0;
+            background-color: var(--gold);
+            transition: width 0.4s ease;
+        }
+
+        .index-nav li a:hover::after {
+            width: 100%;
+        }
+
+        .gender-icon {
+            width: 80px;
+            height: 80px;
+            border-radius: 50%;
+            border: 3px solid var(--gold);
+            overflow: hidden;
+            background-size: cover;
+            background-position: center;
+        }
+
+        /* Sección Intro */
+        .intro-section {
+            max-width: 1100px;
+            margin: 100px auto;
+            padding: 0 30px;
+            text-align: center;
+        }
+
+        .intro-section h2 {
+            font-family: 'Playfair Display', serif;
+            font-size: 3.2rem;
+            color: var(--navy);
+            margin-bottom: 1.5rem;
+        }
+
+        .intro-section p {
+            font-size: 1.25rem;
+            max-width: 800px;
+            margin: 0 auto 2.5rem;
+            color: #444;
+        }
+
+        @media (max-width: 768px) {
+            header h1 { font-size: 3.2rem; }
+            header { padding: 140px 15px 100px; }
+            .index-nav ul { gap: 2rem; flex-direction: column; }
+            .gender-icon { width: 100px; height: 100px; }
+        }
     </style>
 </head>
 <body>
 
-<!-- Login Screen -->
-<div id="login-screen">
-    <div class="login-box">
-        <h2>Iniciar Sesión</h2>
-        <input type="email" id="email" placeholder="Correo" required>
-        <input type="password" id="password" placeholder="Contraseña" required>
-        <button id="login-btn">Iniciar con Email</button>
-        <button id="google-btn">Iniciar con Google</button>
-        <p id="msg" style="color: var(--accent); margin-top: 15px;"></p>
-    </div>
-</div>
+    <!-- Hero Section estilo Nike -->
+    <header>
+        <h1>PREMIUM PERFORMANCE</h1>
+        <p class="subtitle">Tecnología de punta. Diseño impecable. Rendimiento sin límites.</p>
+        <a href="#catalogo" class="btn-primary">COMPRA DIRECTA AQUÍ</a>
+        <p style="margin-top: 2rem; font-size: 1.3rem; opacity: 0.9;">
+            Pares de calidad • Envío gratis • Garantía de satisfacción
+        </p>
+    </header>
 
-<!-- Main Content -->
-<div id="main-content">
-    <div class="container">
-        <div class="welcome" id="welcome-msg"></div>
+    <!-- Barra de navegación / Index con imágenes -->
+    <nav class="index-nav">
+        <ul>
+            <li>
+                <a href="#hombres">
+                    <div class="gender-icon" style="background-image: url('https://images.unsplash.com/photo-1552374196-1ab2a1c0f0b1?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80');"></div>
+                    TENIS DE HOMBRE
+                </a>
+            </li>
+            <li>
+                <a href="#mujeres">
+                    <div class="gender-icon" style="background-image: url('https://images.unsplash.com/photo-1599566150163-7d1a6c9e6d2e?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80');"></div>
+                    TENIS DE MUJER
+                </a>
+            </li>
+        </ul>
+    </nav>
 
-        <!-- Hero Banners -->
-        <div class="hero">
-            <div class="hero-item con-1"><img src="https://images.unsplash.com/photo-1542291026-7eec264c27ff?w=600" alt="Banner 1"></div>
-            <div class="hero-item con-2"><img src="https://images.unsplash.com/photo-1551107696-ac3941e1ff64?w=600" alt="Banner 2"></div>
-            <div class="hero-item con-3"><img src="https://images.unsplash.com/photo-1600185365926-3a2b4c3a3f75?w=600" alt="Banner 3"></div>
-            <div class="hero-item con-4"><img src="https://images.unsplash.com/photo-1515955656352-a1fa886574a8?w=600" alt="Banner 4"></div>
-            <div class="hero-item con-5"><img src="https://images.unsplash.com/photo-1549298916-b41d501d3772?w=600" alt="Banner 5"></div>
-            <div class="hero-item con-6"><img src="https://images.unsplash.com/photo-1605348532760-6753d2c43360?w=600" alt="Banner 6"></div>
-        </div>
+    <!-- Sección introductoria -->
+    <section class="intro-section">
+        <h2>Elige tu movimiento</h2>
+        <p>
+            Cada paso cuenta. Cada diseño inspira. Descubre la nueva colección de tenis premium con tecnología avanzada, materiales de primera calidad y un estilo que define tu personalidad. 
+            Envío gratis a todo México y la garantía que mereces.
+        </p>
+        <a href="#catalogo" class="btn-primary">VER CATÁLOGO COMPLETO</a>
+    </section>
 
-        <h2 class="section-title">Nuestros Productos</h2>
+    <!-- Aquí iría el catálogo de productos... -->
 
-        <!-- Dos filas de carrusel -->
-        <div class="carousel-row" id="row1"></div>
-        <div class="carousel-row" id="row2"></div>
-    </div>
-
-    <footer>
-        <div class="social-links">
-            <a href="#" id="ig-link">Instagram</a> |
-            <a href="#" id="fb-link">Facebook</a> |
-            <a href="#" id="wa-link">WhatsApp</a>
-        </div>
-    </footer>
-</div>
-
-<!-- Firebase SDK -->
-<script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
-
-<script>
-    const firebaseConfig = {
-        apiKey: "AIzaSyAt8TuulnlY3IKPaFVctgaGNQWewfzONEI",
-        authDomain: "comprobantes-363c9.firebaseapp.com",
-        databaseURL: "https://comprobantes-363c9-default-rtdb.firebaseio.com",
-        projectId: "comprobantes-363c9",
-        storageBucket: "comprobantes-363c9.firebasestorage.app",
-        messagingSenderId: "390391998056",
-        appId: "1:390391998056:web:23e22073d88bc247d43ddd",
-        measurementId: "G-8W03RJD0TZ"
-    };
-
-    firebase.initializeApp(firebaseConfig);
-    const auth = firebase.auth();
-    const db = firebase.firestore();
-
-    const loginScreen = document.getElementById('login-screen');
-    const mainContent = document.getElementById('main-content');
-    const msg = document.getElementById('msg');
-
-    // Login Email/Password
-    document.getElementById('login-btn').addEventListener('click', () => {
-        const email = document.getElementById('email').value;
-        const pass = document.getElementById('password').value;
-        auth.signInWithEmailAndPassword(email, pass).then(user => {
-            loadApp(user.user);
-        }).catch(err => {
-            if (err.code === 'auth/user-not-found' || err.code === 'auth/wrong-password') {
-                msg.textContent = "Ups, no estás invitado a este proyecto";
-            } else {
-                msg.textContent = err.message;
-            }
-        });
-    });
-
-    // Google Sign-In
-    document.getElementById('google-btn').addEventListener('click', () => {
-        const provider = new firebase.auth.GoogleAuthProvider();
-        auth.signInWithPopup(provider).then(result => {
-            loadApp(result.user);
-        }).catch(err => {
-            msg.textContent = "Error Google: " + err.message;
-        });
-    });
-
-    function loadApp(user) {
-        loginScreen.style.display = 'none';
-        mainContent.style.display = 'block';
-        document.getElementById('welcome-msg').textContent = `Bienvenido, ${user.displayName || user.email}`;
-
-        loadRedes();
-        loadProductos();
-    }
-
-    function loadRedes() {
-        db.collection('redes').doc('config').get().then(doc => {
-            if (doc.exists) {
-                const data = doc.data();
-                document.getElementById('ig-link').href = data.instagram || '#';
-                document.getElementById('fb-link').href = data.facebook || '#';
-                document.getElementById('wa-link').href = data.whatsapp ? `https://wa.me/${data.whatsapp}` : '#';
-            }
-            // Click handler para mensaje
-            ['ig-link', 'fb-link', 'wa-link'].forEach(id => {
-                document.getElementById(id).addEventListener('click', e => {
-                    if (e.target.href === '#') {
-                        e.preventDefault();
-                        alert('Ups, aún no están configurados por el admin');
-                    }
-                });
-            });
-        });
-    }
-
-    async function loadProductos() {
-        const snapshot = await db.collection('productos').orderBy('nombre').get();
-        const productos = snapshot.docs.map(doc => ({id: doc.id, ...doc.data()}));
-
-        const row1 = document.getElementById('row1');
-        const row2 = document.getElementById('row2');
-
-        // Llenar con productos o placeholders (mínimo 6 por fila para ejemplo)
-        const all = [...productos, ...Array(12 - productos.length).fill(null)];
-
-        all.slice(0, 6).forEach(p => renderCard(row1, p));
-        all.slice(6, 12).forEach(p => renderCard(row2, p));
-    }
-
-    function renderCard(container, producto) {
-        const card = document.createElement('div');
-        card.className = 'product-card' + (producto ? '' : ' empty');
-
-        if (producto) {
-            card.innerHTML = `
-                <img src="${producto.imagen || 'https://via.placeholder.com/300'}" alt="${producto.nombre}">
-                <h3>${producto.nombre}</h3>
-                <p>$${producto.precio}</p>
-            `;
-            card.onclick = () => location.href = `producto.html?id=${producto.id}`;
-        } else {
-            card.innerHTML = '<p>Próximamente...</p>';
-        }
-        container.appendChild(card);
-    }
-</script>
 </body>
 </html>
