--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Sneakers Premium - Hermosillo</title>
+  <title>Sneakers Premium • Hermosillo</title>
   <style>
     :root {
-      --navy: #1a2b4c;          /* Azul marino apagado */
-      --gold: #c5a880;          /* Dorado nubloso principal */
-      --gold-dark: #b89778;     /* Dorado hover */
-      --text-light: #f5f5f5;
-      --text-dark: #d0d0d0;
-      --bg-dark: #0f1621;
-      --nf-overlay: rgba(0,0,0,0.75);
+      --deep-navy:    #08121d;        /* Fondo principal - azul marino muy profundo */
+      --navy-dark:    #0a1625;        /* Variación ligeramente más clara para capas */
+      --gold-premium: #d4af37;        /* Dorado metálico principal - muy atractivo */
+      --gold-light:   #e6c567;        /* Dorado más brillante para hover y brillos */
+      --gold-dark:    #b8972e;        /* Dorado oscuro para profundidad */
+      --text-light:   #f8f9fa;
+      --text-muted:   #c5ccd6;
+      --shadow-gold:  rgba(212, 175, 55, 0.35);
     }
 
     * {
@@ -22,83 +23,80 @@
     }
 
     body {
-      font-family: 'Segoe UI', system-ui, -apple-system, sans-serif;
-      background-color: var(--bg-dark);
+      font-family: 'Segoe UI', system-ui, sans-serif;
+      background-color: var(--deep-navy);
       color: var(--text-light);
       line-height: 1.6;
     }
 
-    /* Header / Intro estilo McQueen + rayo dorado */
+    /* Header - impacto visual máximo */
     header {
-      background: linear-gradient(rgba(15, 22, 33, 0.92), rgba(15, 22, 33, 0.85)),
-                  url('https://images.stockx.com/images/Alexander-McQueen-Oversized-Light-Gold-Product.jpg?fit=fill&bg=FFFFFF&w=1400&h=1000&fm=webp&auto=compress&q=90') center center / cover no-repeat;
+      background: linear-gradient(to bottom, rgba(8,18,29,0.92), rgba(8,18,29,0.85)),
+                  url('https://images.stockx.com/images/Alexander-McQueen-Oversized-Light-Gold-Product.jpg?fit=fill&bg=FFFFFF&w=1400&h=1000&fm=webp&auto=compress&q=90') center / cover;
       background-blend-mode: multiply;
-      padding: 6rem 2rem 7rem;
+      padding: 8rem 2rem 9rem;
       text-align: center;
       position: relative;
       overflow: hidden;
     }
 
-    /* Rayo dorado atravesando (efecto diagonal) */
+    /* Rayo dorado dinámico y elegante */
     header::before {
       content: '';
       position: absolute;
-      top: -50%; left: -50%;
-      width: 200%; height: 200%;
+      inset: -50%;
       background: linear-gradient(
         135deg,
         transparent 40%,
-        rgba(197,168,128,0.35) 45%,
-        rgba(197,168,128,0.6) 50%,
-        rgba(197,168,128,0.35) 55%,
-        transparent 60%
+        rgba(212,175,55,0.5) 48%,
+        rgba(230,197,103,0.8) 52%,
+        rgba(212,175,55,0.5) 56%,
+        transparent 64%
       );
-      transform: rotate(25deg);
-      animation: lightning 8s infinite linear;
-      pointer-events: none;
+      transform: rotate(32deg);
+      animation: rayo 12s infinite linear;
       opacity: 0.7;
+      pointer-events: none;
     }
 
-    @keyframes lightning {
-      0%   { transform: translateX(-100%) rotate(25deg); }
-      100% { transform: translateX(100%)  rotate(25deg); }
+    @keyframes rayo {
+      0%   { transform: translateX(-130%) rotate(32deg); }
+      100% { transform: translateX(130%)  rotate(32deg); }
     }
 
-    /* Letras NF sutiles / casi invisibles en negro */
+    /* NF sutil en fondo */
     header::after {
-      content: "NF NF NF NF NF";
+      content: "NF  NF  NF";
       position: absolute;
       inset: 0;
-      font-size: 18rem;
+      font-size: 22rem;
       font-weight: 900;
-      color: rgba(0,0,0,0.25);
-      letter-spacing: -0.5rem;
-      line-height: 0.7;
-      user-select: none;
+      color: rgba(0,0,0,0.22);
+      letter-spacing: -1.2rem;
+      line-height: 0.6;
       pointer-events: none;
-      text-align: center;
-      overflow: hidden;
-      opacity: 0.4;
+      user-select: none;
+      opacity: 0.3;
     }
 
     .logo {
-      font-size: 4.2rem;
+      font-size: 5.2rem;
       font-weight: 900;
-      letter-spacing: 6px;
-      color: var(--gold);
+      letter-spacing: 10px;
+      color: var(--gold-premium);
       text-transform: uppercase;
-      margin-bottom: 1rem;
-      text-shadow: 0 6px 20px rgba(197,168,128,0.5);
+      text-shadow: 0 8px 30px var(--shadow-gold);
+      margin-bottom: 1.2rem;
       position: relative;
       z-index: 2;
     }
 
     .tagline {
-      font-size: 1.9rem;
+      font-size: 2.2rem;
       font-weight: 300;
-      color: var(--text-dark);
-      margin-bottom: 1.5rem;
-      max-width: 780px;
+      color: var(--text-muted);
+      margin-bottom: 2rem;
+      max-width: 820px;
       margin-left: auto;
       margin-right: auto;
       position: relative;
@@ -106,55 +104,55 @@
     }
 
     .pitch {
-      font-size: 1.45rem;
-      color: #e0c070;
+      font-size: 1.65rem;
+      color: var(--gold-light);
       font-weight: 500;
-      margin: 1.5rem 0 3rem;
-      letter-spacing: 1px;
+      margin: 2.2rem 0 4rem;
+      letter-spacing: 1.3px;
       position: relative;
       z-index: 2;
     }
 
     .cta-button {
       display: inline-block;
-      background-color: var(--gold);
-      color: var(--navy);
-      font-size: 1.7rem;
+      background: linear-gradient(135deg, var(--gold-premium), var(--gold-light));
+      color: var(--deep-navy);
+      font-size: 1.9rem;
       font-weight: bold;
-      padding: 1.3rem 3.5rem;
-      border-radius: 50px;
+      padding: 1.5rem 4.5rem;
+      border-radius: 70px;
       text-decoration: none;
       text-transform: uppercase;
-      letter-spacing: 2.5px;
-      transition: all 0.35s ease;
-      box-shadow: 0 10px 30px rgba(197,168,128,0.45);
+      letter-spacing: 3.5px;
+      box-shadow: 0 12px 40px var(--shadow-gold);
+      transition: all 0.4s ease;
       position: relative;
       z-index: 2;
     }
 
     .cta-button:hover {
-      background-color: var(--gold-dark);
-      transform: translateY(-5px);
-      box-shadow: 0 15px 40px rgba(197,168,128,0.55);
+      background: linear-gradient(135deg, var(--gold-light), var(--gold-premium));
+      transform: translateY(-8px) scale(1.04);
+      box-shadow: 0 25px 60px rgba(212,175,55,0.55);
     }
 
-    /* Menú / Índice */
+    /* Navegación */
     nav {
-      background-color: rgba(26, 43, 76, 0.94);
-      backdrop-filter: blur(10px);
+      background-color: rgba(8,18,29,0.96);
+      backdrop-filter: blur(14px);
       position: sticky;
       top: 0;
       z-index: 100;
-      padding: 1.2rem 2rem;
-      box-shadow: 0 5px 20px rgba(0,0,0,0.6);
+      padding: 1.6rem 2rem;
+      box-shadow: 0 8px 30px rgba(0,0,0,0.65);
     }
 
     .nav-container {
-      max-width: 1200px;
+      max-width: 1240px;
       margin: 0 auto;
       display: flex;
       justify-content: center;
-      gap: 5rem;
+      gap: 7rem;
     }
 
     .nav-item {
@@ -163,79 +161,56 @@
       align-items: center;
       text-decoration: none;
       color: var(--text-light);
-      transition: all 0.3s ease;
+      transition: all 0.4s ease;
     }
 
     .nav-item:hover {
-      color: var(--gold);
-      transform: translateY(-6px);
+      color: var(--gold-premium);
+      transform: translateY(-10px);
     }
 
     .nav-item img {
-      width: 110px;
-      height: 110px;
+      width: 130px;
+      height: 130px;
       object-fit: contain;
-      margin-bottom: 1rem;
-      filter: drop-shadow(0 5px 12px rgba(0,0,0,0.7));
+      margin-bottom: 1.4rem;
+      filter: drop-shadow(0 8px 20px rgba(0,0,0,0.75));
     }
 
     .nav-item span {
-      font-size: 1.3rem;
+      font-size: 1.5rem;
       font-weight: 600;
-      letter-spacing: 1.2px;
+      letter-spacing: 1.8px;
       text-transform: uppercase;
     }
 
     /* Responsive */
     @media (max-width: 768px) {
-      header {
-        padding: 5rem 1.5rem 6rem;
-      }
-
-      .logo {
-        font-size: 3.2rem;
-      }
-
-      .tagline {
-        font-size: 1.5rem;
-      }
-
-      .pitch {
-        font-size: 1.25rem;
-      }
-
-      .nav-container {
-        flex-direction: column;
-        gap: 2.5rem;
-      }
-
-      .cta-button {
-        font-size: 1.4rem;
-        padding: 1.1rem 3rem;
-      }
+      header          { padding: 6.5rem 1.5rem 8rem; }
+      .logo           { font-size: 4rem; }
+      .tagline        { font-size: 1.8rem; }
+      .pitch          { font-size: 1.4rem; }
+      .cta-button     { font-size: 1.6rem; padding: 1.3rem 4rem; }
+      .nav-container  { flex-direction: column; gap: 3.5rem; }
     }
   </style>
 </head>
 <body>
 
-  <!-- Menú / Índice -->
   <nav>
     <div class="nav-container">
       <a href="#hombre" class="nav-item">
-        <img src="https://www.shutterstock.com/image-vector/mens-shoe-black-silhouette-vector-260nw-2502099183.jpg" 
-             alt="Tenis de Hombre">
+        <img src="https://www.shutterstock.com/image-vector/mens-shoe-black-silhouette-vector-260nw-2502099183.jpg" alt="Tenis Hombre">
         <span>Tenis de Hombre</span>
       </a>
       
       <a href="#mujer" class="nav-item">
-        <img src="https://cdn.vectorstock.com/i/1000v/30/89/flat-silhouette-shoes-or-sneakers-icon-set-vector-48123089.jpg" 
-             alt="Tenis de Mujer">
+        <img src="https://cdn.vectorstock.com/i/1000v/30/89/flat-silhouette-shoes-or-sneakers-icon-set-vector-48123089.jpg" alt="Tenis Mujer">
         <span>Tenis de Mujer</span>
       </a>
     </div>
   </nav>
 
-  <!-- Introducción estilo premium McQueen -->
   <header>
     <div class="logo">SNEAKERS PREMIUM</div>
     
@@ -250,12 +225,11 @@
     <a href="#catalogo" class="cta-button">COMPRA DIRECTA AQUÍ!!</a>
   </header>
 
-  <!-- Puedes poner aquí tu catálogo con id="hombre" e id="mujer" -->
-  <main style="padding: 5rem 2rem; text-align: center;">
-    <h2 style="font-size: 3rem; color: var(--gold); margin-bottom: 2rem;">Colección Exclusiva</h2>
-    <p style="font-size: 1.4rem; max-width: 900px; margin: 0 auto 4rem; color: #ccc;">
-      Descubre los diseños más deseados con el toque premium que solo encuentras con nosotros.
-    </p>
+  <!-- Espacio para tu catálogo -->
+  <main style="padding: 7rem 2rem; text-align: center;">
+    <h2 style="font-size: 4rem; color: var(--gold-premium); margin-bottom: 2.5rem; letter-spacing: 2px;">
+      Colección Exclusiva
+    </h2>
   </main>
 
 </body>
